link for homepage

--- a/example.html
+++ b/example.html
@@ -10,12 +10,17 @@
   <title>EXAMPLE</title>
 </head>
 <body>
+
   <h1>CSS GRID EXAMPLE</h1>
+  <div class="homepage">
+      <a href="index.html">Home Page</a>
+  </div>
   <wrapper>
     <div class="header">Header</div>
     <div class="menu">Menu</div>
     <div class="content">Content</div>
     <div class="footer">Footer</div>
   </wrapper>
+
 </body>
 </html>
