--- a/html/mock.html
+++ b/html/mock.html
@@ -12,7 +12,7 @@
 
 <body>
   <article>
-    <h1 id="running-any-npm-pacakge-in-the-browser-locally">Running any NPM pacakge in the browser locally</h1>
+    <h1 id="running-any-npm-package-in-the-browser-locally">Running any NPM package in the browser locally</h1>
 
     <p>JavaScript has never had any official solution for distributing packages, and every web platform (Rails, Django etc)
       has their own idea of how to structure and package JavaScript. In the last few years NPM has started becoming the canonical
@@ -22,6 +22,10 @@
     <p>Scrimba is a platform for interactive coding screencast where you can run the code at any moment in time. Being able
       to use NPM packages has been a frequently requested feature, but it turns out to be surprisingly technically difficult
       to implement. In this article I will explain how we tackled the problem and the final solution we ended up with.</p>
+
+    <p class="aside">
+      you can target to move only this paragraph!!!
+    </p>
 
     <figure>
       <img src="https://mave.me/img/projects/full_placeholder.png">
